k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend-deploy
  namespace: default
  labels:
    app:  backend-deploy
spec:
  selector:
    matchLabels:
      app: backend-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app:  backend-deploy
    spec:
      containers:
      - name:  backend-deploy
        image: gopikondaji/backend:2
        resources:
            limits:
              cpu: 4010m
              memory: 5010Mi
            requests:
              cpu: '4'
              memory: 5000Mi
        ports:
        - containerPort:  3000
          name:  backend-deploy
      restartPolicy: Always
