k8s/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: default
  labels:
    app: mongo-deploy
spec:
  selector:
    matchLabels:
      app: mongo-deploy
  replicas: 1

  template:
    metadata:
      labels:
        app: mongo-deploy
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: mongo-deploy
          image: mongo
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi

          ports:
            - containerPort: 27017
              name: mongo-deploy
