k8s/mongodb-deploy.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name:  mongo-deploy
#   namespace: default
#   labels:
#     app:  mongo-deploy
# spec:
#   selector:
#     matchLabels:
#       app: mongo-deploy
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app:  mongo-deploy
#     spec:
#       # initContainers:
#         # Init containers are exactly like regular containers, except:
#           # - Init containers always run to completion.
#           # - Each init container must complete successfully before the next one starts.
#       containers:
#       - name:  mongo-deploy
#         image:  mongo
#         resources:
#           requests:
#             cpu: 100m
#             memory: 100Mi
#           limits:
#             cpu: 100m
#             memory: 100Mi
#         ports:
#         - containerPort:  27017
#           name:  mongo-deploy
#       restartPolicy: Always


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: default
  labels:
    app: mongo-deploy
spec:
  selector:
    matchLabels:
      app: mongo-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-deploy
    spec:
      containers:
      - name: mongo-deploy
        image: mongo
        resources:
            limits:
              cpu: '1'
              memory: 1000Mi
            requests:
              cpu: '1'
              memory: 1000Mi
        ports:
        - containerPort: 27017
          name: mongo-deploy
        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
