k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-deploy
  namespace: default
spec:
  selector:
    app: frontend-deploy
  type: NodePort
  
  ports:
  - name: frontend-deploy
    protocol: TCP
    port: 5173
    targetPort: 5173 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30000
