k8s/mongo-express-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
  namespace: default
spec:
  selector:
    app: mongo-express-svc
  type: NodePort
  
  ports:
  - name: mongo-express-svc
    protocol: TCP
    port: 3000
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30002
