k8s/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-deploy
  namespace: default
spec:
  selector:
    app: mongo-deploy
  type: ClusterIP
  
  ports:
  - name: mongo-deploy
    protocol: TCP
    port: 27017
    targetPort: 27017
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
