k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 5173  
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://frontend-svc"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  rules:
  - host: backend-svc
    http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   frontend:
      #     service:
      #       name: frontend-svc
      #       port:
      #         number: 5173
      - path: /api/v1/user/signup
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 30001
